SERVER-54231 Resharding must not leave stale collection catalog entries