src/mongo/db/s/config/sharding_catalog_manager_database_operations.cpp
@@ -61,10 +61,6 @@ ShardId selectShardForNewDatabase(OperationContext* opCtx, ShardRegistry* shardR
     shardRegistry->reload(opCtx);
     auto allShardIds = shardRegistry->getAllShardIds(opCtx);
     uassert(ErrorCodes::ShardNotFound, "No shards found", !allShardIds.empty());
-    // TODO SERVER-54231 stop sorting this vector.
-    // Ideally it should be shuffled so that the we choose a random candidate based only
-    // on shard size and not on their lexical order.
-    std::sort(allShardIds.begin(), allShardIds.end());
 
     ShardId candidateShardId = allShardIds[0];
 
